Datasource file organized network state funcs added GameListFragment reorganized GameListAdapter ViewHolder reorganized, pagedlist functions implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <resources>
     <string name="app_name">gmr</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="rating">Rating:</string>
     <string name="releaseDate">Release Date:</string>
+    <string name="gameImage">Game Image</string>
 
 </resources>
